--- a/src/main/resources/conf/tasks.properties
+++ b/src/main/resources/conf/tasks.properties
@@ -1,3 +1,4 @@
+## 这里配置你的日报
 0=携程接口对接
 1=通票系统完善
 2=接口优化
@@ -9,8 +10,11 @@
 8=spring相关bug修复
 9=shell脚本优化
 10=服务器配置
-
+## 这里配置邮箱 自己的和要发的
 admin=wei.dong@ectrip.com
 leader=wei.dong@ectrip.com
 #admin=admin@ectrip.com
 #leader=xinhao.chen@ectrip.com
+mypass=19931226dongW
+myemail=wei.dong@ectrip.com
+title=日报
