--- a/src/main/resources/conf/tasks.properties
+++ b/src/main/resources/conf/tasks.properties
@@ -15,6 +15,6 @@ admin=wei.dong@ectrip.com
 leader=wei.dong@ectrip.com
 #admin=admin@ectrip.com
 #leader=xinhao.chen@ectrip.com
-mypass=19931226dongW
+mypass=xxxxxxxx
 myemail=wei.dong@ectrip.com
 title=日报
